2006-11-23 22:23-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: Move initial position of
	Gorm document window back to the lower left of the screen.

2006-11-23 11:03-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Version: updated version requirements.

2006-11-18  Matt Rice  <ratmice@gmail.com>

	* GormCore/GormDocumentWindow.[h,m]: Add copyright headers.
	
2006-11-18  Matt Rice  <ratmice@gmail.com>

	* GormCore/GNUmakefile: Add GormDocumentWindow.[h,m].
	* GormCore/GormResourceManager.m: Add code to handle 
	image/sound/header files.
	* GormCore/GormDocument.[h,m]: Add -viewWithTag: method.
	* GormCore/GormClassEditor.m: Remove dragging destination code
	for resources.
	* GormCore/GormResourceEditor.m: Ditto.
	* GormCore/GormObjectEditor.m: Ditto.
	(addObject:): Change the editor to the GormObjectEditor.
	* GormCore/GormDocument.m: Register the window for dragged types.
	Implement -viewWithTag:.
	* GormCore/GormDocumentWindow.[h,m]: New subclass of NSWindow which
	handles drag and drop to GormResourceManager.
	* GormCore/GormDocument.gorm: Set the main document  window to a
	GormDocumentWindow class.

2006-11-15  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/Examples/Controller/GNUmakefile: Do not set 
	GNUSTEP_INSTALLATION_DIR.
	* Documentation/Examples/SimpleApp/GNUmakefile: Same change.	

2006-11-11 00:04-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormNSSliderInspector.gorm: Added switch
	and textfield to hold the number of tickmarks.
	* Palettes/2Controls/GormSliderAttributesInspector.[hm]: Added
	method and ivar to handle tick marks.

2006-10-29 19:21-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormTableViewEditor.m: Add scrollToPoint:
	method to call the super_view. Corrects bug #18143.

2006-10-28 09:41-EDT Gregory John Casamento <greg_casamento@yahoo.com>
